--- a/public/index.html
+++ b/public/index.html
@@ -20,24 +20,25 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      padding: 2rem 2.5rem;
-      background: linear-gradient(145deg, #1a2033, #0e1024);
+      padding: 2.2rem 3rem;
+      background: linear-gradient(135deg, #191e32, #0e1325);
       color: #ffffff;
       font-family: 'Poppins', sans-serif;
-      font-size: 1.25rem;
+      font-size: 1.4rem;
       text-align: center;
-      border-radius: 24px;
+      border-radius: 30px;
       z-index: 50;
-      box-shadow: 0 0 60px rgba(255,255,255,0.08);
-      animation: fadeOutIntro 5s ease 3.2s forwards;
+      box-shadow: 0 0 90px rgba(0,255,195,0.15);
+      animation: fadeOutIntro 3.5s ease 2.5s forwards;
     }
     .introWidget .highlight {
       color: #00ffc3;
-      font-weight: 700;
+      font-weight: 800;
+      text-shadow: 0 0 10px #00ffc3;
     }
 
     @keyframes fadeOutIntro {
-      to { opacity: 0; visibility: hidden; transform: translate(-50%, -60%); }
+      to { opacity: 0; visibility: hidden; transform: translate(-50%, -70%); }
     }
 
     .grid {
@@ -65,19 +66,19 @@
     }
 
     .block {
-      border-radius: 20px;
+      border-radius: 22px;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       font-weight: bold;
       color: white;
       position: relative;
       cursor: pointer;
       background-size: 300% 300%;
-      box-shadow: 0 10px 28px rgba(0,0,0,0.4);
-      border: 2px solid rgba(255,255,255,0.07);
+      box-shadow: 0 12px 30px rgba(0,0,0,0.45);
+      border: 2px solid rgba(255,255,255,0.08);
     }
 
     .label {
@@ -98,7 +99,7 @@
       text-align: center;
       padding: 1rem;
       font-family: 'Poppins', sans-serif;
-      font-size: 1.1rem;
+      font-size: 1.15rem;
       color: white;
     }
 
@@ -110,8 +111,8 @@
     .portada img {
       max-width: 90%;
       max-height: 90%;
-      border-radius: 20px;
-      box-shadow: 0 15px 35px rgba(0,0,0,0.5);
+      border-radius: 22px;
+      box-shadow: 0 15px 38px rgba(0,0,0,0.5);
     }
 
     .ctaZone {
@@ -121,7 +122,7 @@
       transform: translateX(-50%);
       display: none;
       flex-direction: row;
-      gap: 1rem;
+      gap: 1.2rem;
       z-index: 10;
     }
 
@@ -169,21 +170,21 @@
     }
 
     .celebracion-message {
-      font-size: 2rem;
+      font-size: 2.4rem;
       color: #fff;
       text-align: center;
       font-family: 'Poppins', sans-serif;
       background: rgba(255, 255, 255, 0.05);
-      padding: 2rem 3rem;
-      border-radius: 20px;
-      box-shadow: 0 0 50px rgba(255,255,255,0.15);
+      padding: 2.5rem 3.5rem;
+      border-radius: 22px;
+      box-shadow: 0 0 80px rgba(255,255,255,0.12);
     }
 
     .resaltado {
       color: #00ffc3;
       font-weight: 900;
-      font-size: 3rem;
-      text-shadow: 0 0 10px #00ffc3, 0 0 20px #00ffc3;
+      font-size: 3.5rem;
+      text-shadow: 0 0 20px #00ffc3, 0 0 40px #00ffc3;
     }
 
     @keyframes fadeIn {
