--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>TrigguiApp – Un instante, un universo</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
+    /* Estilos generales */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
@@ -15,6 +16,7 @@
       user-select: none;
     }
 
+    /* Widget inicial */
     .introWidget {
       position: absolute;
       top: 50%;
@@ -24,23 +26,23 @@
       background: linear-gradient(135deg, #191e32, #0e1325);
       color: #ffffff;
       font-family: 'Poppins', sans-serif;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       text-align: center;
       border-radius: 30px;
       z-index: 50;
       box-shadow: 0 0 90px rgba(0,255,195,0.15);
-      animation: fadeOutIntro 3.5s ease 2.5s forwards;
+      animation: fadeOutIntro 2.2s ease 1.2s forwards;
     }
     .introWidget .highlight {
-      color: #00ffc3;
+      color: #30ffe4; text-shadow: 0 0 4px #30ffe4;
       font-weight: 800;
       text-shadow: 0 0 10px #00ffc3;
     }
-
     @keyframes fadeOutIntro {
       to { opacity: 0; visibility: hidden; transform: translate(-50%, -70%); }
     }
 
+    /* Grid y layout de bloques */
     .grid {
       position: absolute;
       top: 5vh;
@@ -50,14 +52,12 @@
       display: grid;
       gap: 1vw;
     }
-
     @media (orientation: landscape) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
-
     @media (orientation: portrait) {
       .grid {
         grid-template-columns: repeat(2, 1fr);
@@ -71,7 +71,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       font-weight: bold;
       color: white;
       position: relative;
@@ -80,7 +80,6 @@
       box-shadow: 0 12px 30px rgba(0,0,0,0.45);
       border: 2px solid rgba(255,255,255,0.08);
     }
-
     .label {
       display: flex;
       align-items: center;
@@ -107,7 +106,6 @@
       flex-direction: column;
       animation: fadeIn 1s ease forwards;
     }
-
     .portada img {
       max-width: 90%;
       max-height: 90%;
@@ -115,6 +113,7 @@
       box-shadow: 0 15px 38px rgba(0,0,0,0.5);
     }
 
+    /* CTA */
     .ctaZone {
       position: fixed;
       bottom: 3vh;
@@ -125,7 +124,6 @@
       gap: 1.2rem;
       z-index: 10;
     }
-
     .ctaZone button {
       border: none;
       padding: 0.6rem 1.2rem;
@@ -138,22 +136,20 @@
       min-width: 160px;
       text-align: center;
     }
-
     .ctaZone button:hover {
       transform: scale(1.06);
       box-shadow: 0 8px 24px rgba(0,0,0,0.4);
     }
-
     #btnOtro {
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       color: #000;
     }
-
     #btnLibro {
       background: linear-gradient(135deg, #a1ffce, #faffd1);
       color: #000;
     }
 
+    /* Celebración */
     .celebracion-overlay {
       position: fixed;
       inset: 0;
@@ -164,11 +160,9 @@
       z-index: 20;
       animation: fadeOutCelebracion 0.3s ease 2.3s forwards;
     }
-
     @keyframes fadeOutCelebracion {
       to { opacity: 0; visibility: hidden; }
     }
-
     .celebracion-message {
       font-size: 2.4rem;
       color: #fff;
@@ -179,12 +173,11 @@
       border-radius: 22px;
       box-shadow: 0 0 80px rgba(255,255,255,0.12);
     }
-
     .resaltado {
-      color: #00ffc3;
+      color: #30ffe4; text-shadow: 0 0 4px #30ffe4;
       font-weight: 900;
       font-size: 3.5rem;
-      text-shadow: 0 0 20px #00ffc3, 0 0 40px #00ffc3;
+      text-shadow: 0 0 4px #30ffe4, 0 0 10px #30ffe4;
     }
 
     @keyframes fadeIn {
