--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
 
   <div class="ctaZone" id="ctaZone">
     <button id="btnOtro">🎲 Clic si quieres otro digital</button>
-    <button id="btnLibro">📖 Clic si abriste cualquier otro físico</button>
+    <button id="btnLibro">📖 Clic si abriste uno físico</button>
   </div>
 
   <div class="celebracion-overlay" id="celebracionOverlay">
