--- a/public/index.html
+++ b/public/index.html
@@ -1,132 +1,149 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+<title>Triggui — Abre un libro físico. Aquí y ahora.</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet"/>
 
-  <style>
-    /* ------------- RESET & BASE ------------- */
-    *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
-    html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);-webkit-overflow-scrolling:touch;overflow-y:scroll;user-select:none}
+<style>
+/* RESET & BASE */
+*,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
+html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow-y:scroll;-webkit-overflow-scrolling:touch;user-select:none}
 
-    /* ------------- INTRO ------------- */
-    .intro{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);padding:2.2rem 3rem;background:linear-gradient(135deg,#191e32,#0e1325);color:#fff;font-family:'Poppins',sans-serif;font-size:1.2rem;text-align:center;border-radius:30px;box-shadow:0 0 16px rgba(48,255,228,.3);z-index:50;animation:fadeOutIntro 2.2s ease 1.2s forwards}
-    .intro .hl{color:#30ffe4;font-weight:800}
-    @keyframes fadeOutIntro{to{opacity:0;visibility:hidden;transform:translate(-50%,-70%)}}
+/* INTRO */
+.intro{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);padding:2.2rem 3rem;background:linear-gradient(135deg,#191e32,#0e1325);color:#fff;font-family:'Poppins',sans-serif;font-size:1.2rem;text-align:center;border-radius:30px;box-shadow:0 0 16px rgba(48,255,228,.3);z-index:50;animation:fadeOutIntro 2.2s ease 1.2s forwards}
+.intro .hl{color:#30ffe4;font-weight:800}
+@keyframes fadeOutIntro{to{opacity:0;visibility:hidden;transform:translate(-50%,-70%)}}
 
-    /* ------------- GRID ------------- */
-    .grid{position:absolute;top:5vh;bottom:5vh;left:1.5vw;right:1.5vw;display:grid;gap:1vw}
-    @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
-    @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
+/* GRID */
+.grid{position:absolute;top:5vh;bottom:5vh;left:1.5vw;right:1.5vw;display:grid;gap:1vw}
+@media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
+@media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
-    /* ------------- BLOCK ------------- */
-    .block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.2rem;font-weight:bold;position:relative;cursor:pointer;background-size:300% 300%;box-shadow:0 12px 30px rgba(0,0,0,.45);border:2px solid rgba(255,255,255,.08)}
-    .label{display:flex;align-items:center;justify-content:center;height:100%;width:100%;padding:1rem}
-    .frase,.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;text-align:center;padding:1rem;font-family:'Poppins',sans-serif;font-size:1.1rem}
-    .portada{flex-direction:column;animation:fadeIn 1s ease forwards}
-    .portada img{max-width:90%;max-height:90%;border-radius:22px;box-shadow:0 15px 38px rgba(0,0,0,.5)}
-    .portada pre{white-space:pre-line;font-size:2.2rem;font-weight:900;line-height:1.2;margin-top:-.3rem;text-align:center}
+/* BLOCK */
+.block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.2rem;font-weight:bold;position:relative;cursor:pointer;background-size:300% 300%;box-shadow:0 12px 30px rgba(0,0,0,.45);border:2px solid rgba(255,255,255,.08)}
+.label{display:flex;align-items:center;justify-content:center;height:100%;width:100%;padding:1rem}
+.frase,.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;text-align:center;padding:1rem;font-family:'Poppins',sans-serif;font-size:1.1rem}
+.portada{flex-direction:column;animation:fadeIn 1s ease forwards}
 
-    @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
+/* portada IMG */
+.portada img{max-width:90%;max-height:90%;border-radius:22px;box-shadow:0 15px 38px rgba(0,0,0,.5)}
 
-    /* ------------- CTA ZONE ------------- */
-    .cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1.2rem;z-index:10}
-    .cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.95rem;font-weight:bold;cursor:pointer;box-shadow:0 4px 14px rgba(0,0,0,.3);transition:.2s;min-width:160px}
-    .cta button:hover{transform:scale(1.06);box-shadow:0 8px 24px rgba(0,0,0,.4)}
-    #otro{background:linear-gradient(135deg,#ff9a9e,#fad0c4);color:#000}
-    #físico{background:linear-gradient(135deg,#a1ffce,#faffd1);color:#000}
+/* portada TEXT */
+.title{font-size:clamp(2.4rem,4vw,3.6rem);font-weight:900;line-height:1.1;margin-bottom:.6rem;letter-spacing:-.5px;background-size:200% 200%;background-clip:text;-webkit-background-clip:text;color:transparent;animation:gradMove 6s ease infinite}
+@keyframes gradMove{0%{background-position:0 0}50%{background-position:100% 100%}100%{background-position:0 0}}
+.author{font-size:clamp(1.2rem,2.3vw,1.6rem);font-weight:600;opacity:.85;color:#ffffff}
 
-    /* ------------- CELEBRACIÓN ------------- */
-    .cele-overlay{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:20;animation:fadeOutCelebracion .3s ease 2.3s forwards}
-    @keyframes fadeOutCelebracion{to{opacity:0;visibility:hidden}}
-    .cele-msg{font-size:2.4rem;color:#fff;text-align:center;font-family:'Poppins',sans-serif;background:rgba(255,255,255,.05);padding:2.5rem 3.5rem;border-radius:22px;box-shadow:0 0 80px rgba(255,255,255,.12)}
-    .num{color:#00ffc3;font-weight:900;font-size:3.6rem;letter-spacing:-1px}
-  </style>
+/* CTA */
+.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1.2rem;z-index:10}
+.cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.95rem;font-weight:bold;cursor:pointer;box-shadow:0 4px 14px rgba(0,0,0,.3);transition:.2s;min-width:160px}
+.cta button:hover{transform:scale(1.06);box-shadow:0 8px 24px rgba(0,0,0,.4)}
+#otro{background:linear-gradient(135deg,#ff9a9e,#fad0c4);color:#000}
+#físico{background:linear-gradient(135deg,#a1ffce,#faffd1);color:#000}
+
+/* CELEBRACIÓN */
+.cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:20;animation:fadeOut .3s ease 2.3s forwards}
+@keyframes fadeOut{to{opacity:0;visibility:hidden}}
+.cele-msg{font-size:2.4rem;color:#fff;text-align:center;font-family:'Poppins',sans-serif;background:rgba(255,255,255,.05);padding:2.5rem 3.5rem;border-radius:22px;box-shadow:0 0 80px rgba(255,255,255,.12)}
+.num{color:#00ffc3;font-weight:900;font-size:3.6rem;letter-spacing:-1px}
+</style>
 </head>
 <body>
 
-  <div class="intro"><span class="hl">Respira</span>. Elige una palabra. <span class="hl">En alguno de los bloques aparecerá un libro</span>.</div>
+<div class="intro"><span class="hl">Respira</span>. Elige una palabra. <span class="hl">En alguno de los bloques aparecerá un libro</span>.</div>
 
-  <div class="grid" id="grid"></div>
+<div class="grid" id="grid"></div>
 
-  <div class="cta" id="cta">
-    <button id="otro">🎲 Clic si quieres otro digital</button>
-    <button id="físico">📖 Clic si abriste uno físico</button>
-  </div>
+<div class="cta" id="cta">
+  <button id="otro">🎲 Clic si quieres otro digital</button>
+  <button id="físico">📖 Clic si abriste uno físico</button>
+</div>
 
-  <div class="cele-overlay" id="cele">
-    <div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div>
-  </div>
+<div class="cele" id="cele">
+  <div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div>
+</div>
 
 <script>
-/* ---------- helpers ---------- */
-const grid = document.getElementById("grid");
-const cta  = document.getElementById("cta");
-const btnOtro  = document.getElementById("otro");
-const btnLibro = document.getElementById("físico");
-const cele = document.getElementById("cele");
-const celeMsg = document.getElementById("celeMsg");
-const isURL = s => /^https?:\/\//i.test((s||"").trim());
-const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
-const grad = hex =>{
+const grid=document.getElementById("grid");
+const cta=document.getElementById("cta");
+const btnOtro=document.getElementById("otro");
+const btnLibro=document.getElementById("físico");
+const cele=document.getElementById("cele");
+const celeMsg=document.getElementById("celeMsg");
+
+let libro=null,portaIdx=0,revelado=false;
+const emojis=["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
+const isURL=s=>/^https?:\/\//i.test((s||"").trim());
+const grad=hex=>{
   const r=parseInt(hex.substr(1,2),16),g=parseInt(hex.substr(3,2),16),b=parseInt(hex.substr(5,2),16);
-  const l=`rgba(${Math.min(r+50,255)},${Math.min(g+50,255)},${Math.min(b+50,255)},0.85)`;
-  return `linear-gradient(135deg,${hex},${l})`;
+  const light=`rgba(${Math.min(r+60,255)},${Math.min(g+60,255)},${Math.min(b+60,255)},0.85)`;
+  return`linear-gradient(135deg,${hex},${light})`;
 };
 
-let libro=null,porta=0,revelado=false;
+function crearPortada(){
+  const div=document.createElement("div");div.className="portada";
+  if(isURL(libro.portada)){
+    const img=new Image();img.src=libro.portada;div.append(img);
+  }else{
+    const colors=libro.colores.slice(0,2).join(',');
+    const title=document.createElement("div");title.className="title";title.textContent=libro.portada.split('\n')[0];
+    title.style.backgroundImage=`linear-gradient(135deg,${colors})`;
+    const author=document.createElement("div");author.className="author";author.textContent=libro.portada.split('\n').slice(1).join(' ');
+    div.append(title,author);
+  }
+  return div;
+}
 
-/* ---------- UI render ---------- */
-function render(){
+function buildUI(){
   grid.innerHTML="";
   libro.palabras.forEach((pal,i)=>{
     const blk=document.createElement("div");blk.className="block";blk.dataset.i=i;blk.style.background=grad(libro.colores[i]);
     /* label */
     const label=document.createElement("div");label.className="label";label.textContent=`${emojis[i]} ${pal}`;label.style.color=libro.textColors[i];
     /* frase */
-    const frase=document.createElement("div");frase.className="frase";frase.textContent=libro.frases[i];frase.style.color=libro.textColors[i];
+    const fr=document.createElement("div");fr.className="frase";fr.textContent=libro.frases[i];fr.style.color=libro.textColors[i];
     /* portada */
-    const port=document.createElement("div");port.className="portada";
-    if(isURL(libro.portada)){const img=new Image();img.src=libro.portada;port.append(img);}
-    else{const pre=document.createElement("pre");pre.textContent=libro.portada;port.append(pre);}
-    blk.append(label,frase,port);
-    blk.onclick=()=>clickBloque(blk);
-    grid.appendChild(blk);
+    const port=crearPortada();
+    blk.append(label,fr,port);
+    blk.onclick=()=>handleClick(blk);
+    grid.append(blk);
   });
 }
 
-/* ---------- click handlers ---------- */
-function clickBloque(blk){
-  const idx=+blk.dataset.i;
+function handleClick(blk){
+  const i=+blk.dataset.i;
   const [label,frase,port]=blk.children;
-  if(revelado && idx!==porta){return location.reload();}
-  if(!revelado && idx===porta){
+  if(revelado&&i!==portaIdx){return location.reload();}
+  if(!revelado&&i===portaIdx){
     blk.innerHTML="";port.style.display="flex";blk.append(port);
-    [...grid.children].forEach((b,j)=>{if(j!==idx){b.children[0].style.display="none";b.children[1].style.display="flex";}});
+    [...grid.children].forEach((b,j)=>{if(j!==i){b.children[0].style.display="none";b.children[1].style.display="flex";}});
     cta.style.display="flex";revelado=true;
-  }else if(!revelado){label.style.display="none";frase.style.display="flex";}
+  }else if(!revelado){
+    label.style.display="none";frase.style.display="flex";
+  }
 }
 
 btnOtro.onclick=()=>location.reload();
 
 btnLibro.onclick=async()=>{
   btnLibro.disabled=true;cele.style.display="flex";celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
-  try{const r=await fetch("https://triggui-api.vercel.app/api/increment");const d=await r.json();celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`}
-  catch{celeMsg.textContent="📚 Error al contar libros";}
+  try{
+    const r=await fetch("https://triggui-api.vercel.app/api/increment");
+    const d=await r.json();
+    celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
+  }catch{celeMsg.textContent="📚 Error al contar libros";}
   setTimeout(()=>{cele.style.display="none";cta.style.display="flex";},2300);
 };
 
-/* ---------- init ---------- */
-(async ()=>{
+(async()=>{
   try{
     const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
     const data=await r.json();
     libro=data.libros[Math.floor(Math.random()*data.libros.length)];
-    porta=Math.floor(Math.random()*4);
-    render();
+    portaIdx=Math.floor(Math.random()*4);
+    buildUI();
   }catch(e){console.error("Error cargando contenido:",e);}
 })();
 </script>
