--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
 
 <style>
-/* RESET + BASE */
+/* RESET & BASE */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
 html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow-y:scroll;-webkit-overflow-scrolling:touch;user-select:none}
 
 /* INTRO */
-.intro{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);padding:2.2rem 3rem;background:linear-gradient(135deg,#191e32,#0e1325);color:#fff;font-family:'Poppins',sans-serif;font-size:1.2rem;text-align:center;border-radius:30px;box-shadow:0 0 16px rgba(48,255,228,.3);z-index:50;animation:fadeOutIntro 2.2s ease 1.2s forwards}
+.intro{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);padding:2.2rem 3rem;background:linear-gradient(135deg,#191e32,#0e1325);color:#fff;font-family:'Poppins',sans-serif;font-size:1.1rem;text-align:center;border-radius:30px;box-shadow:0 0 16px rgba(48,255,228,.3);z-index:50;animation:fadeOutIntro 2.0s ease 1.0s forwards}
 .intro .hl{color:#30ffe4;font-weight:800}
 @keyframes fadeOutIntro{to{opacity:0;visibility:hidden;transform:translate(-50%,-70%)}}
 
@@ -23,35 +23,33 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
 /* BLOCK */
-.block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.2rem;font-weight:bold;position:relative;cursor:pointer;background-size:300% 300%;box-shadow:0 12px 30px rgba(0,0,0,.45);border:2px solid rgba(255,255,255,.08);overflow:hidden}
+.block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.1rem;font-weight:bold;position:relative;cursor:pointer;background-size:300% 300%;box-shadow:0 12px 30px rgba(0,0,0,.45);border:2px solid rgba(255,255,255,.08);overflow:hidden}
 .label{display:flex;align-items:center;justify-content:center;height:100%;width:100%;padding:1rem}
-.frase,.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;text-align:center;padding:1rem;font-family:'Poppins',sans-serif;font-size:1.1rem}
-.portada{animation:fadeIn .8s ease forwards}
+.frase,.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;text-align:center;padding:1rem;font-family:'Poppins',sans-serif;font-size:1rem}
+
+/* portada IMG */
+.portada img{max-width:88%;max-height:88%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55);animation:fadeIn .8s ease forwards}
+
+/* portada TEXT */
+.cover{width:88%;max-width:320px;aspect-ratio:0.72;display:flex;flex-direction:column;justify-content:center;align-items:center;border-radius:18px;padding:1rem 1.4rem;text-align:center;color:#fff;box-shadow:0 12px 32px rgba(0,0,0,.55);animation:fadeIn .8s ease forwards}
+.cover-title{font-size:clamp(1.8rem,4.5vw,3.2rem);font-weight:800;line-height:1.1;margin-bottom:.4rem;letter-spacing:-.5px;background-clip:text;-webkit-background-clip:text;color:transparent}
+.cover-author{font-size:clamp(.9rem,2.2vw,1.3rem);font-weight:600;opacity:.9}
+
+/* fadeIn */
 @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-.portada img{max-width:92%;max-height:92%;border-radius:18px;box-shadow:0 15px 40px rgba(0,0,0,.55)}
-
-/* ------------ BOOK EFFECT (texto) ------------ */
-.book{position:relative;width:86%;max-width:310px;aspect-ratio:0.72;border-radius:18px;display:flex;flex-direction:column;justify-content:center;align-items:center;padding:1.2rem 1.6rem;text-align:center;color:#fff;box-shadow:0 18px 40px rgba(0,0,0,.55);transform:perspective(800px) rotateY(-8deg);background-size:200% 200%;animation:gradMove 8s linear infinite}
-.book:before, .book:after{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none}
-.book:before{background:rgba(0,0,0,.35);mix-blend-mode:multiply}
-.book:after{right:-12px;width:20px;background:linear-gradient(90deg,rgba(255,255,255,.4),rgba(255,255,255,.15) 30%,rgba(0,0,0,.25) 60%);border-radius:0 18px 18px 0;filter:blur(1px)} /* lomito */
-@keyframes gradMove{0%{background-position:0 0}50%{background-position:100% 100%}100%{background-position:0 0}}
-
-.book-title{font-size:clamp(2.2rem,5vw,3.8rem);font-weight:800;line-height:1.1;letter-spacing:-.6px;background-clip:text;-webkit-background-clip:text;color:transparent}
-.book-author{font-size:clamp(1rem,2vw,1.4rem);font-weight:600;margin-top:.8rem;opacity:.9}
 
 /* CTA */
 .cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1.2rem;z-index:10}
-.cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.95rem;font-weight:bold;cursor:pointer;box-shadow:0 4px 14px rgba(0,0,0,.3);transition:.2s;min-width:160px}
-.cta button:hover{transform:scale(1.06);box-shadow:0 8px 24px rgba(0,0,0,.4)}
+.cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:bold;cursor:pointer;box-shadow:0 4px 14px rgba(0,0,0,.3);transition:.2s;min-width:150px}
+.cta button:hover{transform:scale(1.06);box-shadow:0 8px 24px rgba(0,0,0,.38)}
 #otro{background:linear-gradient(135deg,#ff9a9e,#fad0c4);color:#000}
 #físico{background:linear-gradient(135deg,#a1ffce,#faffd1);color:#000}
 
 /* CELEBRACIÓN */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:20;animation:fadeOut .3s ease 2.3s forwards}
 @keyframes fadeOut{to{opacity:0;visibility:hidden}}
-.cele-msg{font-size:2.4rem;color:#fff;text-align:center;font-family:'Poppins',sans-serif;background:rgba(255,255,255,.05);padding:2.5rem 3.5rem;border-radius:22px;box-shadow:0 0 80px rgba(255,255,255,.12)}
-.num{color:#00ffc3;font-weight:900;font-size:3.6rem;letter-spacing:-1px}
+.cele-msg{font-size:2.2rem;color:#fff;text-align:center;font-family:'Poppins',sans-serif;background:rgba(255,255,255,.05);padding:2.4rem 3.2rem;border-radius:20px;box-shadow:0 0 70px rgba(255,255,255,.12)}
+.num{color:#00ffc3;font-weight:900;font-size:3.4rem;letter-spacing:-1px}
 </style>
 </head>
 <body>
@@ -65,40 +63,35 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
   <button id="físico">📖 Clic si abriste uno físico</button>
 </div>
 
-<div class="cele" id="cele">
-  <div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div>
-</div>
+<div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
-/* --- helpers --- */
 const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
       btnOtro=document.getElementById("otro"),btnLibro=document.getElementById("físico"),
       cele=document.getElementById("cele"),celeMsg=document.getElementById("celeMsg");
-let libro=null,porta=0,revelado=false;
+
+let libro=null,portaIdx=0,revelado=false;
 const emojis=["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
 const isURL=s=>/^https?:\/\//i.test((s||"").trim());
-const grad=hex=>{const r=parseInt(hex.substr(1,2),16),g=parseInt(hex.substr(3,2),16),b=parseInt(hex.substr(5,2),16);
-  const l=`rgba(${Math.min(r+60,255)},${Math.min(g+60,255)},${Math.min(b+60,255)},.85)`;return`linear-gradient(135deg,${hex},${l})`;};
+const grad=hex=>{const r=parseInt(hex.slice(1,3),16),g=parseInt(hex.slice(3,5),16),b=parseInt(hex.slice(5,7),16);
+  const l=`rgba(${Math.min(r+60,255)},${Math.min(g+60,255)},${Math.min(b+60,255)},0.85)`;return`linear-gradient(135deg,${hex},${l})`;};
 
-/* --- build portada elemento book or img --- */
 function makePortada(){
-  const d=document.createElement("div");d.className="portada";
+  const cont=document.createElement("div");cont.className="portada";
   if(isURL(libro.portada)){
-    const img=new Image();img.src=libro.portada;d.append(img);
+    const img=new Image();img.src=libro.portada;cont.append(img);
   }else{
-    const book=document.createElement("div");book.className="book";
-    const title=document.createElement("div");title.className="book-title";title.textContent=libro.portada.split('\n')[0];
-    const author=document.createElement("div");author.className="book-author";author.textContent=libro.portada.split('\n').slice(1).join(' ');
-    /* grad del título igual a book bg */
-    const bgPair=`${libro.colores[0]},${libro.colores[1]||libro.colores[0]}`;
-    book.style.background=`linear-gradient(135deg,${bgPair})`;
-    title.style.backgroundImage=`linear-gradient(135deg,${bgPair})`;
-    book.append(title,author);d.append(book);
+    const cover=document.createElement("div");cover.className="cover";
+    /* use first two colors for harmony */
+    const g=`linear-gradient(135deg,${libro.colores[0]},${libro.colores[1]||libro.colores[0]})`;
+    cover.style.background=g;
+    const title=document.createElement("div");title.className="cover-title";title.textContent=libro.portada.split('\n')[0];title.style.backgroundImage=g;
+    const author=document.createElement("div");author.className="cover-author";author.textContent=libro.portada.split('\n').slice(1).join(' ');
+    cover.append(title,author);cont.append(cover);
   }
-  return d;
+  return cont;
 }
 
-/* --- render UI --- */
 function render(){
   grid.innerHTML="";
   libro.palabras.forEach((p,i)=>{
@@ -110,11 +103,10 @@ function render(){
   });
 }
 
-/* --- click logic --- */
 function clickBlk(blk){
   const i=+blk.dataset.i;const [lab,fr,port]=blk.children;
-  if(revelado&&i!==porta)return location.reload();
-  if(!revelado&&i===porta){
+  if(revelado&&i!==portaIdx)return location.reload();
+  if(!revelado&&i===portaIdx){
     blk.innerHTML="";blk.append(port);port.style.display="flex";
     [...grid.children].forEach((b,j)=>{if(j!==i){b.children[0].style.display="none";b.children[1].style.display="flex";}});
     cta.style.display="flex";revelado=true;
@@ -125,18 +117,16 @@ btnOtro.onclick=()=>location.reload();
 btnLibro.onclick=async()=>{
   btnLibro.disabled=true;cele.style.display="flex";celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
   try{const r=await fetch("https://triggui-api.vercel.app/api/increment");const d=await r.json();
-      celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;}
-  catch{celeMsg.textContent="📚 Error al contar libros";}
+      celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
+  }catch{celeMsg.textContent="📚 Error al contar libros";}
   setTimeout(()=>{cele.style.display="none";cta.style.display="flex";},2300);
 };
 
-/* --- init --- */
 (async()=>{
   try{
     const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
-    const data=await r.json();
-    libro=data.libros[Math.floor(Math.random()*data.libros.length)];
-    porta=Math.floor(Math.random()*4);
+    libro=(await r.json()).libros[Math.floor(Math.random()*10)];
+    portaIdx=Math.floor(Math.random()*4);
     render();
   }catch(e){console.error("Error cargando contenido:",e);}
 })();
