--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 </head>
 <body>
 
-<div class="intro"><span class="hl">¿Qué</span> <span class="hl">sientes?</span>.</div>
+<div class="intro"><span class="hl">¿Qué</span> <span class="hl">sientes?</span></div>
 
 <div class="grid" id="grid"></div>
 
